Change project link content

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             Iconography.
                         </p>
 
-                        <a href="projects/stitched.html" class="button">Project Link</a>
+                        <a href="projects/stitched.html" class="button">Read more</a>
                     </div>
                 </div>
 
@@ -96,7 +96,7 @@
                             Flow/Activity Diagram.
                         </p>
 
-                        <a href="projects/healthy-eats.html" class="button">Project Link</a>
+                        <a href="projects/healthy-eats.html" class="button">Read more</a>
                     </div>
                 </div>
 
@@ -118,7 +118,7 @@
                             Flow/Activity Diagram.
                         </p>
 
-                        <a href="projects/cinemagic.html" class="button">Project Link</a>
+                        <a href="projects/cinemagic.html" class="button">Read more</a>
                     </div>
                 </div>
 
@@ -141,7 +141,7 @@
                             Iconography, User Flow/Activity Diagram.
                         </p>
 
-                        <a href="projects/frugalityfirst.html" class="button">Project Link</a>
+                        <a href="projects/frugalityfirst.html" class="button">Read more</a>
                     </div>
                 </div>
             </div>
