Add unique IDs to body tags

--- a/projects/cinemagic.html
+++ b/projects/cinemagic.html
@@ -14,7 +14,7 @@
     <title>UI Portfolio | Cinemagic</title>
 </head>
 
-<body>
+<body id="cinemagicPage">
     <header id="nav">
         <div>
             <a href="../index.html">
