--- a/projects/frugalityfirst.html
+++ b/projects/frugalityfirst.html
@@ -14,7 +14,7 @@
     <title>UI Portfolio | FrugalityFirst</title>
 </head>
 
-<body>
+<body id="frugalityFirstPage">
     <header id="nav">
         <div>
             <a href="../index.html">
