--- a/projects/healthy-eats.html
+++ b/projects/healthy-eats.html
@@ -14,7 +14,7 @@
     <title>UI Portfolio | Healthy Eats</title>
 </head>
 
-<body>
+<body id="healthyEatsPage">
     <header id="nav">
         <div>
             <a href="../index.html">
