--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <title>About | Vivian</title>
 </head>
 
-<body>
+<body id="aboutPage">
     <header id="nav">
         <div>
             <a href="../index.html">
