--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>UI Portfolio | Vivian | United Kingdom</title>
 </head>
 
-<body>
+<body id="homePage">
     <header id="nav">
         <div>
             <a href="index.html">
