--- a/projects/stitched.html
+++ b/projects/stitched.html
@@ -14,7 +14,7 @@
     <title>UI Portfolio | Stitched</title>
 </head>
 
-<body>
+<body id="stitchedPage">
     <header id="nav">
         <div>
             <a href="../index.html">
