Add CSS classes

--- a/about.html
+++ b/about.html
@@ -9,16 +9,16 @@
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <link rel="icon" type="image/x-icon" href="img/logos/small-screens/favicon-icon-flower.png">
+    <link rel="icon" type="image/x-icon" href="img/logos/favicon-icon-flower.png">
     <script src="https://kit.fontawesome.com/bfcbb8f6a3.js" crossorigin="anonymous"></script>
     <title>About | Vivian</title>
 </head>
 
 <body id="aboutPage">
     <header id="nav">
-        <div>
-            <a href="../index.html">
-                <img src="../img/logos/small-screens/logo.png" alt="Logo Vivian">
+        <div class="container">
+            <a href="../index.html" class="logo">
+                <img src="../img/logos/logo.png" alt="Logo Vivian">
             </a>
 
             <nav>
@@ -32,13 +32,13 @@
     </header>
 
     <main id="aboutMe">
-        <div>
+        <div class="container">
             <div>
                 <h1>About</h1>
             </div>
         </div>
 
-        <div>
+        <div class="container">
             <div>
                 <picture>
                     <source media="(min-width:992px)" srcset="../img/self-portrait/big-screens/self-portrait.png">
@@ -106,28 +106,31 @@
     </main>
 
     <footer id="contact">
+        <div class="container">
+            <h2>Get in Touch</h2>
 
-        <h2>Get in Touch</h2>
+            <div>
+                <p>Mobile number: <a href="tel:+123456789">+12 3456789</a></p>
+            </div>
 
-        <div>
-            <p>Mobile number: <a href="tel:+123456789">+12 3456789</a></p>
+            <div>
+                <a href="mailto:email@email.com" class="button email">Email Me</a>
+            </div>
+
+            <div>
+                <ul>
+                    <li><a href="https://twitter.com" target="_blank" class="footer-icon"><i
+                                class="fa-brands fa-twitter"></i></a></li>
+                    <li><a href="https://dribbble.com" target="_blank"><i class="fa-brands fa-dribbble"></i></a></li>
+                    <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    </li>
+                    <li><a href="https://www.behance.net" target="_blank"><i
+                                class="fa-brands fa-square-behance"></i></a></li>
+                </ul>
+            </div>
+
+            <p>Copyright Vivian 2023</p>
         </div>
-
-        <div>
-            <a href="mailto:email@email.com" class="button email">Email Me</a>
-        </div>
-
-        <div>
-            <ul>
-                <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter"></i></a></li>
-                <li><a href="https://dribbble.com" target="_blank"><i class="fa-brands fa-dribbble"></i></a></li>
-                <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
-                <li><a href="https://www.behance.net" target="_blank"><i class="fa-brands fa-square-behance"></i></a>
-                </li>
-            </ul>
-        </div>
-
-        <p>Copyright Vivian 2023</p>
     </footer>
 </body>
 
