Add CSS classes and update directory path

--- a/projects/cinemagic.html
+++ b/projects/cinemagic.html
@@ -9,16 +9,16 @@
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
-    <link rel="icon" type="image/x-icon" href="img/logos/small-screens/favicon-icon-flower.png">
+    <link rel="icon" type="image/x-icon" href="img/logos/favicon-icon-flower.png">
     <script src="https://kit.fontawesome.com/bfcbb8f6a3.js" crossorigin="anonymous"></script>
     <title>UI Portfolio | Cinemagic</title>
 </head>
 
 <body id="cinemagicPage">
     <header id="nav">
-        <div>
-            <a href="../index.html">
-                <img src="../img/logos/small-screens/logo.png" alt="Logo Vivian">
+        <div class="container">
+            <a href="../index.html" class="logo">
+                <img src="../img/logos/logo.png" alt="Logo Vivian">
             </a>
 
             <nav>
@@ -33,13 +33,13 @@
 
     <main id="cinemagicProject">
         <section>
-            <div>
+            <div class="container">
                 <h1>Cinemagic</h1>
             </div>
         </section>
 
         <section>
-            <div>
+            <div class="container">
                 <div>
                     <h2>My Process</h2>
                 </div>
@@ -619,7 +619,7 @@
     </main>
 
     <footer id="contact">
-        <div>
+        <div class="container">
             <h2>Get in Touch</h2>
 
             <div>
