--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                     <img src="../img/self-portrait/small-screens/self-portrait.png" alt="Image of Vivian.">
                 </picture>
 
-                <div>
+                <div class="row">
                     <div>
                         <h2>My Story</h2>
 
@@ -71,7 +71,7 @@
                     <div>
                         <h2>Skills and Tools</h2>
 
-                        <div>
+                        <div class="row">
                             <div>
                                 <h3>Relevant Skills</h3>
                                 <ul>
@@ -129,7 +129,7 @@
                 </ul>
             </div>
 
-            <p>Copyright Vivian 2023</p>
+            <p>&copy; Copyright Vivian 2023</p>
         </div>
     </footer>
 </body>
