--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </ul>
             </div>
 
-            <p>Copyright Vivian 2023</p>
+            <p>&copy; Copyright Vivian 2023</p>
         </div>
     </footer>
 </body>
