Update layout for cinemagic project page

--- a/projects/cinemagic.html
+++ b/projects/cinemagic.html
@@ -35,6 +35,21 @@
         <section>
             <div class="container">
                 <h1>Cinemagic</h1>
+
+                <picture>
+                    <source media="(min-width:992px)" srcset="../img/homepages/big-screens/cinemagic-homepage.png">
+                    <img src="../img/homepages/small-screens/cinemagic-homepage.png" alt="Cinemagic homepage screen.">
+                </picture>
+
+                <!-- overview -->
+                <div>
+                    <p>
+                        This project is about designing a native mobile app for both iOS and Android phones, that
+                        solves a specific user problem. It aims to assist young adults, who enjoy watching movies at
+                        cinemas, to book and buy movie tickets at their convenience, so they can watch the
+                        respective films.
+                    </p>
+                </div>
             </div>
         </section>
 
@@ -42,22 +57,6 @@
             <div class="container">
                 <div>
                     <h2>My Process</h2>
-                </div>
-
-                <!-- overview -->
-                <div>
-                    <div>
-                        <h2>Overview</h2>
-                    </div>
-
-                    <div>
-                        <p>
-                            This project is about designing a native mobile app for both iOS and Android phones, that
-                            solves a specific user problem. It aims to assist young adults, who enjoy watching movies at
-                            cinemas, to book and buy movie tickets at their convenience, so they can watch the
-                            respective films.
-                        </p>
-                    </div>
                 </div>
 
                 <!-- overall process stages -->
@@ -599,20 +598,22 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
 
-                <!-- conclusion -->
+        <!-- conclusion -->
+        <section>
+            <div class="container">
                 <div>
-                    <div>
-                        <h3>Conclusion</h3>
-                    </div>
+                    <h2>Conclusion</h2>
+                </div>
 
-                    <div>
-                        <p>
-                            A native mobile app was successfully created for both iOS and Android mobile phones. Both
-                            the Human Interface and Material Design Guidelines were followed to ensure the app met their
-                            standards. Feedback from users also helped in making the design of the app intuitive.
-                        </p>
-                    </div>
+                <div>
+                    <p>
+                        A native mobile app was successfully created for both iOS and Android mobile phones. Both
+                        the Human Interface and Material Design Guidelines were followed to ensure the app met their
+                        standards. Feedback from users also helped in making the design of the app intuitive.
+                    </p>
                 </div>
             </div>
         </section>
@@ -641,7 +642,7 @@
                 </ul>
             </div>
 
-            <p>Copyright Vivian 2023</p>
+            <p>&copy; Copyright Vivian 2023</p>
         </div>
     </footer>
 </body>
