Update layout for frugalityfirst project page

--- a/projects/frugalityfirst.html
+++ b/projects/frugalityfirst.html
@@ -35,6 +35,23 @@
         <section>
             <div class="container">
                 <h1>FrugalityFirst</h1>
+
+                <picture>
+                    <source media="(min-width:992px)"
+                        srcset="../img/homepages/big-screens/frugalityfirst-homepage.png">
+                    <img src="../img/homepages/small-screens/frugalityfirst-homepage.png"
+                        alt="FrugalityFirst homepage screen.">
+                </picture>
+
+                <!-- overview -->
+                <div>
+                    <p>
+                        This project is about providing users with a guide to save money quickly and cover the cost
+                        of a big expenditure. It includes designed screens showcasing an overview of the user's
+                        finances. As well as features allowing users to state when their saving goal is and how long
+                        they have to achieve it. It also notifies and rewards users when a saving goal has been met.
+                    </p>
+                </div>
             </div>
         </section>
 
@@ -42,22 +59,6 @@
             <div class="container">
                 <div>
                     <h2>My Process</h2>
-                </div>
-
-                <!-- overview -->
-                <div>
-                    <div>
-                        <h2>Overview</h2>
-                    </div>
-
-                    <div>
-                        <p>
-                            This project is about providing users with a guide to save money quickly and cover the cost
-                            of a big expenditure. It includes designed screens showcasing an overview of the user's
-                            finances. As well as features allowing users to state when their saving goal is and how long
-                            they have to achieve it. It also notifies and rewards users when a saving goal has been met.
-                        </p>
-                    </div>
                 </div>
 
                 <!-- overall process stages -->
@@ -337,21 +338,23 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
 
-                <!-- conclusion -->
+        <!-- conclusion -->
+        <section>
+            <div class="container">
                 <div>
-                    <div>
-                        <h3>Conclusion</h3>
-                    </div>
+                    <h2>Conclusion</h2>
+                </div>
 
-                    <div>
-                        <p>
-                            This app design provides screens that help users save money for purchasing costly items. It
-                            allows users to enter a time period they want for saving money and rewards them with a
-                            message once they meet their saving goal. As a result, this app helps users be more cautious
-                            with their financial information.
-                        </p>
-                    </div>
+                <div>
+                    <p>
+                        This app design provides screens that help users save money for purchasing costly items. It
+                        allows users to enter a time period they want for saving money and rewards them with a
+                        message once they meet their saving goal. As a result, this app helps users be more cautious
+                        with their financial information.
+                    </p>
                 </div>
             </div>
         </section>
@@ -380,7 +383,7 @@
                 </ul>
             </div>
 
-            <p>Copyright Vivian 2023</p>
+            <p>&copy; Copyright Vivian 2023</p>
         </div>
     </footer>
 </body>
