Update layout for healthy eats project page

--- a/projects/healthy-eats.html
+++ b/projects/healthy-eats.html
@@ -35,6 +35,23 @@
         <section>
             <div class="container">
                 <h1>Healthy Eats</h1>
+
+                <picture>
+                    <source media="(min-width:992px)" srcset="../img/homepages/big-screens/healthy-eats-homepage.png">
+                    <img src="../img/homepages/small-screens/healthy-eats-homepage.png"
+                        alt="Healthy Eats homepage screen.">
+                </picture>
+
+                <!-- overview -->
+                <div>
+                    <p>
+                        The aim is for users to research new meal recipes on the web app so they can follow along
+                        and attempt cooking them. It provides the means to find a selection of healthy recipes, with
+                        an ingredient list and a list of instructions. This web app has been designed for adults,
+                        over 18 years old, who enjoy cooking at home because they want control over the type of
+                        healthy meals they consume.
+                    </p>
+                </div>
             </div>
         </section>
 
@@ -42,23 +59,6 @@
             <div class="container">
                 <div>
                     <h2>My Process</h2>
-                </div>
-
-                <!-- overview -->
-                <div>
-                    <div>
-                        <h2>Overview</h2>
-                    </div>
-
-                    <div>
-                        <p>
-                            The aim is for users to research new meal recipes on the web app so they can follow along
-                            and attempt cooking them. It provides the means to find a selection of healthy recipes, with
-                            an ingredient list and a list of instructions. This web app has been designed for adults,
-                            over 18 years old, who enjoy cooking at home because they want control over the type of
-                            healthy meals they consume.
-                        </p>
-                    </div>
                 </div>
 
                 <!-- overall process stages -->
@@ -308,21 +308,23 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
 
-                <!-- conclusion -->
+        <!-- conclusion -->
+        <section>
+            <div class="container">
                 <div>
-                    <div>
-                        <h3>Conclusion</h3>
-                    </div>
+                    <h2>Conclusion</h2>
+                </div>
 
-                    <div>
-                        <p>
-                            The recipe web app was successfully designed. Users can easily search for healthy meals and
-                            find their ingredients list and cooking instructions. Improving on the design to attract
-                            over 18 year olds was also a success as user feedback from this demographic was collected
-                            and applied onto the web app designs.
-                        </p>
-                    </div>
+                <div>
+                    <p>
+                        The recipe web app was successfully designed. Users can easily search for healthy meals and
+                        find their ingredients list and cooking instructions. Improving on the design to attract
+                        over 18 year olds was also a success as user feedback from this demographic was collected
+                        and applied onto the web app designs.
+                    </p>
                 </div>
             </div>
         </section>
@@ -351,7 +353,7 @@
                 </ul>
             </div>
 
-            <p>Copyright Vivian 2023</p>
+            <p>&copy; Copyright Vivian 2023</p>
         </div>
     </footer>
 </body>
