Update layout for stitched project page

--- a/projects/stitched.html
+++ b/projects/stitched.html
@@ -35,6 +35,23 @@
         <section>
             <div class="container">
                 <h1>Stitched</h1>
+
+                <picture>
+                    <source media="(min-width:992px)" srcset="../img/homepages/big-screens/stitched-homepage.png">
+                    <img src="../img/homepages/small-screens/stitched-homepage.png" alt="Stitched homepage screen.">
+                </picture>
+
+                <!-- overview -->
+                <div>
+                    <p>
+                        This project is about designing a web application for mobile phones which allow users to buy
+                        and sell vintage clothing. It includes 10 high-fidelity wireframes, all with key features
+                        added onto each. Also, it has 6 key functionalities, in total, for the users to interact with.
+                        Other clothing apps were researched and analysed to study the functionalities they offer. These
+                        mobile designs are aimed at the 25 to 34 year old demographic. A fun and vibrant colour palette
+                        was used to appeal to a younger audience.
+                    </p>
+                </div>
             </div>
         </section>
 
@@ -42,27 +59,6 @@
             <div class="container">
                 <div>
                     <h2>My Process</h2>
-                </div>
-
-                <!-- overview -->
-                <div>
-                    <div>
-                        <h2>Overview</h2>
-                    </div>
-
-                    <div>
-                        <p>
-                            This project is about designing a web application for mobile phones which allow users to buy
-                            and sell vintage clothing. It includes 10 high-fidelity wireframes, all with key features
-                            added
-                            onto each. Also, it has 6 key functionalities, in total, for the users to interact with.
-                            Other
-                            clothing apps were researched and analysed to study the functionalities they offer. These
-                            mobile designs are aimed at the 25 to 34 year old demographic. A fun and vibrant colour
-                            palette was
-                            used to appeal to a younger audience.
-                        </p>
-                    </div>
                 </div>
 
                 <!-- overall process stages -->
@@ -381,21 +377,23 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
 
-                <!-- conclusion -->
+        <!-- conclusion -->
+        <section>
+            <div class="container">
                 <div>
-                    <div>
-                        <h3>Conclusion</h3>
-                    </div>
+                    <h2>Conclusion</h2>
+                </div>
 
-                    <div>
-                        <p>
-                            Creating a vintage clothing app, for 25 to 34 year olds, was a success. Using Balsamiq
-                            wireframes allowed for rapid sketches of low fidelity wireframes to be created. Figma was
-                            useful at adding real text and a colour scheme to the mobile screens' mid fidelity
-                            wireframes. All the key functionalities were implemented.
-                        </p>
-                    </div>
+                <div>
+                    <p>
+                        Creating a vintage clothing app, for 25 to 34 year olds, was a success. Using Balsamiq
+                        wireframes allowed for rapid sketches of low fidelity wireframes to be created. Figma was
+                        useful at adding real text and a colour scheme to the mobile screens' mid fidelity
+                        wireframes. All the key functionalities were implemented.
+                    </p>
                 </div>
             </div>
         </section>
@@ -424,7 +422,7 @@
                 </ul>
             </div>
 
-            <p>Copyright Vivian 2023</p>
+            <p>&copy; Copyright Vivian 2023</p>
         </div>
     </footer>
 </body>
