--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <header id="nav">
         <div class="container">
             <a href="../index.html" class="logo">
-                <img src="../img/logos/logo.png" alt="Logo Vivian">
+                <img src="img/logos/logo.png" alt="Logo Vivian">
             </a>
 
             <nav>
@@ -41,12 +41,12 @@
         <div class="container">
             <div>
                 <picture>
-                    <source media="(min-width:992px)" srcset="../img/self-portrait/big-screens/self-portrait.png">
-                    <img src="../img/self-portrait/small-screens/self-portrait.png" alt="Image of Vivian.">
+                    <source media="(min-width:992px)" srcset="img/self-portrait/big-screens/self-portrait.png">
+                    <img src="img/self-portrait/small-screens/self-portrait.png" alt="Image of Vivian.">
                 </picture>
 
-                <div class="row">
-                    <div>
+                <div class="row self-info-container">
+                    <div class="story-column">
                         <h2>My Story</h2>
 
                         <p>
@@ -68,11 +68,11 @@
                         </p>
                     </div>
 
-                    <div>
+                    <div class="skills-column">
                         <h2>Skills and Tools</h2>
 
                         <div class="row">
-                            <div>
+                            <div class="col-md-6">
                                 <h3>Relevant Skills</h3>
                                 <ul>
                                     <li>Low, Mid, High Fidelity Wireframing</li>
@@ -86,7 +86,7 @@
                                 </ul>
                             </div>
 
-                            <div>
+                            <div class="col-md-6">
                                 <h3>Tools I use</h3>
                                 <ul>
                                     <li>Figma</li>
@@ -110,7 +110,7 @@
             <h2>Get in Touch</h2>
 
             <div>
-                <p>Mobile number: <a href="tel:+123456789">+12 3456789</a></p>
+                <p class="phone">Mobile number: <a href="tel:+123456789">+12 3456789</a></p>
             </div>
 
             <div>
